--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 0.4em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -65,6 +66,10 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.hidden {
+  display: none;
 }
 
 @media (prefers-color-scheme: light) {
